# Cloudflare-Showcase

./: .gitignore  AnalyticsEngine_Specification.md  CLAUDE.md  Cargo.toml  README.md  SQLiteDO_Specification.md  test_export.sql  wrangler.toml
public/static/: pcm-processor.js
src/: lib.rs  template.rs
src/routes/: about.rs  analytics.rs  analytics_api.rs  analytics_dashboard.rs  example_sqlite_do.rs  favicon.rs  index.rs  mod.rs  openai.rs  sqlite.rs  sqlite_do.rs  sqlite_test.rs  stt.rs  study.rs  study_do.rs  turnstile.rs  verify.rs  version.rs  websocket.rs  websocket_do.rs
src/sql/: create_indexes.sql  create_tables.sql  delete_messages.sql  get_all_messages.sql  get_recent_messages.sql  get_schema.sql  get_statistics.sql  get_user_messages.sql
src/templates/: mod.rs
src/templates/components/: clock.rs.html
src/utils/: analytics_bindings.rs  middleware.rs  scripture.rs  sql_bindings.rs  sql_types.d.ts  templates.rs  turnstile.rs
templates/: about.html  analytics.html  analytics_dashboard.html  base.html  footer.html  header.html  index.html  openai.html  sidebar.html  sqlite.html  stt.html  study.html  turnstile.html  verify.html  version.html  websocket.html
templates/components/: analytics.html  footer.html  header.html  logging.html  sidebar.html
