[package]
name = "showcase"
version = "0.2.15"
edition = "2021"
authors = [ "Peter Hammond <https://github.com/PeterMHammond>" ]
description = "A showcase of Cloudflare Workers capabilities using Rust, demonstrating routing and API functionality"
repository = "https://github.com/PeterMHammond/Cloudflare-Showcase"
license = "Unlicense"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5.0"
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
askama = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
chrono = "0.4"
cookie = { version = "0.18", features = ["secure"] }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["getrandom"] }
