[package]
name = "showcase"
version = "0.2.21"
edition = "2021"
authors = [ "Peter Hammond <https://github.com/PeterMHammond>" ]
description = "A showcase of Cloudflare Workers capabilities using Rust, demonstrating routing and API functionality"
repository = "https://github.com/PeterMHammond/Cloudflare-Showcase"
license = "Unlicense"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5.0"
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
askama = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
regex = "1.10"
reqwest = { version = "0.12.14", default-features = false, features = ["json"] }
chrono = "0.4"
cookie = { version = "0.18", features = ["secure"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = { version = "0.9.0"}
base64 = "0.22.1"

[dependencies.getrandom_0_2]
package = "getrandom"
version = "0.3.3"
features = ["js"]
